--- a/pyproject.toml
+++ b/pyproject.toml
@@ -1,5 +1,5 @@
 [build-system]
-requires = ["setuptools>=61.0"]
+requires = ["setuptools>=61.0", "wheel"]
 build-backend = "setuptools.build_meta"
 
 [project]
@@ -22,6 +22,12 @@ readme = "README.md"
 classifiers = [
   "Programming Language :: Python"
 ]
+
+[tool.setuptools]
+packages = ["bigdbm"]
+
+[tool.setuptools.package-data]
+"your_package_name" = ["*.tsv"]
 
 [project.urls]
 Homepage = "https://standarddao.finance"
