Stricter conditions for testing.

--- a/.github/workflows/tests.yaml
+++ b/.github/workflows/tests.yaml
@@ -5,6 +5,9 @@ on:
     paths-ignore:
       - README.md
       - .devcontainer/**/*.*
+      - ".vscode/**/*.*"
+      - .gitignore
+      - pyproject.toml
   pull_request:
     types:  # avoid double runs in open pr
       - opened
