--- a/pyproject.toml
+++ b/pyproject.toml
@@ -8,7 +8,7 @@ version = "0.1.0"
 dependencies = [
   "requests",
   "pandas",
-  "pydantic",
+  "pydantic>=2.0.0",
 ]
 requires-python = ">=3.12"
 authors = [
