--- a/pyproject.toml
+++ b/pyproject.toml
@@ -32,3 +32,4 @@ Repository = "https://github.com/Standard-Labs/bigdbm-python.git"
 
 [project.optional-dependencies]
 logfire = ["logfire"]
+openai = ["openai==1.41.1"]
