--- a/pyproject.toml
+++ b/pyproject.toml
@@ -32,4 +32,4 @@ Repository = "https://github.com/Standard-Labs/bigdbm-python.git"
 
 [project.optional-dependencies]
 logfire = ["logfire"]
-openai = ["openai==1.42.0"]
+openai = ["openai>=1.42.0"]
