--- a/pyproject.toml
+++ b/pyproject.toml
@@ -4,7 +4,7 @@ build-backend = "setuptools.build_meta"
 
 [project]
 name = "real-intent"
-version = "1.3.0"
+version = "v2.2.0"
 dependencies = [
   "requests",
   "pandas",
@@ -24,7 +24,7 @@ classifiers = [
 ]
 
 [tool.setuptools.package-data]
-"real-intent" = ["*.tsv", "*.csv"]
+"real_intent" = ["*.tsv", "*.csv"]
 
 [project.urls]
 Homepage = "https://standarddao.finance"
