--- a/.github/workflows/tests.yaml
+++ b/.github/workflows/tests.yaml
@@ -32,6 +32,7 @@ jobs:
           echo FOLLOWUPBOSS_API_KEY=${{ secrets.FOLLOWUPBOSS_API_KEY }} >> .env
           echo FOLLOWUPBOSS_SYSTEM=${{ secrets.FOLLOWUPBOSS_SYSTEM }} >> .env
           echo FOLLOWUPBOSS_SYSTEM_KEY=${{ secrets.FOLLOWUPBOSS_SYSTEM_KEY }} >> .env
+          echo PERPLEXITY_API_KEY=${{ secrets.PERPLEXITY_API_KEY }} >> .env
 
       - name: Build Docker container
         run: docker build -t real-intent .
