--- a/requirements.txt
+++ b/requirements.txt
@@ -7,7 +7,7 @@ reportlab==4.2.5
 
 python-dotenv
 
-scrapybara==2.0.6
-playwright==1.49.1
+scrapybara>=2.0.6
+playwright>=1.49.1
 
-httpx==0.27.0
+httpx>=0.28.1
