Protect `docs/` from triggering tests.

--- a/.github/workflows/tests.yaml
+++ b/.github/workflows/tests.yaml
@@ -8,6 +8,7 @@ on:
       - ".vscode/**/*.*"
       - .gitignore
       - pyproject.toml
+      - docs/**/*.*
   pull_request:
     types:  # avoid double runs in open pr
       - opened
