--- a/pyproject.toml
+++ b/pyproject.toml
@@ -33,6 +33,6 @@ Repository = "https://github.com/Standard-Labs/real-intent.git"
 [project.optional-dependencies]
 logfire = ["logfire>=2.11.1"]
 ai = ["openai>=1.58.1"]
-events = ["scrapybara>=2.0.6", "playwright>=1.49.1", "httpx==0.27.0"]
+events = ["scrapybara>=2.0.6", "playwright>=1.49.1", "httpx==0.27.0", "anthropic>=0.49.0"]
 pdf = ["reportlab>=4.2.5"]
 dns = ["pymongo"]
