--- a/pyproject.toml
+++ b/pyproject.toml
@@ -10,14 +10,14 @@ dependencies = [
   "pandas",
   "pydantic>=2.10.4",
 ]
-requires-python = ">=3.12"
+requires-python = ">=3.13"
 authors = [
-  {name = "Prerit Das", email = "prerit@standarddao.finance"},
+  {name = "Prerit Das", email = "prerit@standard.ad"},
 ]
 maintainers = [
-  {name = "Prerit Das", email = "prerit@standarddao.finance"},
+  {name = "Prerit Das", email = "prerit@standard.ad"},
 ]
-description = "Standard Labs internal SDK for Real Intent."
+description = "Standard's internal SDK for Real Intent."
 readme = "README.md"
 classifiers = [
   "Programming Language :: Python"
@@ -27,11 +27,11 @@ classifiers = [
 "real_intent" = ["*.tsv", "*.csv"]
 
 [project.urls]
-Homepage = "https://standarddao.finance"
+Homepage = "https://realintent.co"
 Repository = "https://github.com/Standard-Labs/real-intent.git"
 
 [project.optional-dependencies]
-logfire = ["logfire>=2.11.1"]
+logfire = ["logfire>=3.0.0"]
 ai = ["openai>=1.58.1"]
 events = ["scrapybara>=2.0.6", "playwright>=1.49.1", "httpx==0.27.0", "anthropic>=0.49.0", "tldextract>=5.0.0"]
 pdf = ["reportlab>=4.2.5"]
