Use higher version across pyproject.toml and requirements.txt.

--- a/requirements.txt
+++ b/requirements.txt
@@ -2,13 +2,13 @@ pydantic>=2.10.4
 pandas
 requests
 
-logfire>=2.11.1
+logfire>=3.16.2
 openai==1.97.0
-reportlab==4.4.2
+reportlab>=4.4.2
 
 python-dotenv
 
-scrapybara==2.3.0
+scrapybara>=2.3.0
 playwright>=1.49.1
 
 httpx==0.27.0
@@ -16,4 +16,4 @@ pymongo
 
 anthropic>=0.49.0
 
-tldextract
+tldextract>=5.0.0
