--- a/requirements.txt
+++ b/requirements.txt
@@ -3,7 +3,7 @@ pandas>=2.3.0
 requests>=2.32.0
 
 logfire>=4.0.0
-openai>=2.14.0
+openai==2.14.0
 reportlab>=4.4.2
 
 python-dotenv
@@ -17,3 +17,4 @@ pymongo>=4.16.0
 anthropic>=0.75.0
 
 tldextract>=5.0.0
+
