chore: add upper bound to httpx version

--- a/requirements.txt
+++ b/requirements.txt
@@ -1,5 +1,5 @@
 pydantic>=2.12.0
-pandas>=2.3.0
+pandas
 requests>=2.32.0
 
 logfire>=4.0.0
@@ -14,7 +14,7 @@ playwright>=1.49.1
 httpx>=0.27.0
 pymongo>=4.16.0
 
-anthropic>=0.75.0
+anthropic>=0.49.0
 
 tldextract>=5.0.0
 
